@@ -4,7 +4,7 @@ PROJECT(q4wine)
 
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
-SET(APP_VERSION "1.1-r2")
+SET(APP_VERSION "1.2")
 SET(APP_NAME_GLOBAL "q4wine")
 
 if(POLICY CMP0011)
